--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,10 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  name             : "Sibo Zhang"
+  location         : "Beijing"
+  employer         : "UCAS"
+  email            : "zhangsibo22@mails.ucas.ac.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
