--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "jasper.png"
   name             : "Sibo Zhang"
-  
+  bio              : "practice makes perfect"
   location         : "China Beijing"
   employer         : "UCAS"
   email            : "zhangsibo22@mails.ucas.ac.cn" 
