--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   name             : "Sibo Zhang"
   avatar           : "jasper.png"
   bio              : "practice makes perfect"
-  location         : "China Beijing"
-  employer         : "UCAS"
+  location         : "China Tianjin"
+  employer         : "TJU"
   email            : "zhangsibo22@mails.ucas.ac.cn" 
 
   # Academic websites
